Localized app name

--- a/StatisticsCalculator/StatisticsCalculator.iOS/StatisticsCalculator.iOS.csproj
+++ b/StatisticsCalculator/StatisticsCalculator.iOS/StatisticsCalculator.iOS.csproj
@@ -65,6 +65,8 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <BundleResource Include="Resources\en.lproj\InfoPlist.plist" />
+    <BundleResource Include="Resources\pt.lproj\InfoPlist.plist" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
