--- a/StatisticsCalculator/StatisticsCalculator.Android/StatisticsCalculator.Android.csproj
+++ b/StatisticsCalculator/StatisticsCalculator.Android/StatisticsCalculator.Android.csproj
@@ -127,5 +127,11 @@
       <Name>StatisticsCalculator</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\strings.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values-pt\strings.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
