Update android version

--- a/StatisticsCalculator/StatisticsCalculator.Android/Properties/AndroidManifest.xml
+++ b/StatisticsCalculator/StatisticsCalculator.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="2" android:versionName="0.2" package="com.fernandovmp.statisticscalculator" android:installLocation="preferExternal">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="4" android:versionName="0.35" package="com.fernandovmp.statisticscalculator" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="Calculadora Estatística"></application>
+	<application android:label="Calculadora Estatística" android:icon="@mipmap/icon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
