--- a/StatisticsCalculator/StatisticsCalculator/StatisticsCalculator.csproj
+++ b/StatisticsCalculator/StatisticsCalculator/StatisticsCalculator.csproj
@@ -48,6 +48,9 @@
     <EmbeddedResource Update="Resx\AppResources.pt.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\BinomialView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\DefaultCalculatorView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
